--- a/05_data_visualization.Rmd
+++ b/05_data_visualization.Rmd
@@ -1,31 +1,39 @@
 ---
 title: "Data visualization"
-author: "SanjayHamal"
-date: "5/7/2021"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-
+knitr::opts_chunk$set(
+	echo = TRUE,
+	message = FALSE,
+	warning = FALSE
+)
 ```
 
-#Task1:
+## Task1
+
 ```{r, warning=FALSE, message=FALSE}
 #Run this code to observe the dataset
 options(scipen = 999)
-movies = readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2018/2018-10-23/movie_profit.csv')
+
+movies <- read_csv("./data/")
+
 head(movies)
 
 ```
-#Task2
+
+## Task2
+
 ```{r}
 #Load the tidyverse package here:
 
 
 ```
 
-#Task3
+## Task3
+
 ```{r}
 #Insert [movies] dataset in ggplot2 syntax:
 
@@ -33,7 +41,8 @@ ggplot(data =   )
 
 ```
 
-#Task4:
+##  Task4:
+
 ```{r}
 #Map domestic_gross to x-axis, worldwide_gross to y-axis
 #Set the color of point to blue
@@ -47,6 +56,7 @@ ggplot(data = movies)+
 ```
 
 #Task5:
+
 ```{r}
 #Set the color aesthetics to genre and see what happens:
 ggplot(data = movies)+
@@ -57,6 +67,7 @@ ggplot(data = movies)+
              
               
 ```
+
 #Task6:
 
 ```{r}
@@ -73,7 +84,9 @@ ggplot(data = movies,       )
 
 
 ```
+
 #Task7
+
 ```{r}
 #####Change the color of points in geom_point to 'orange'
 #####Change the linetype in geom_smooth to 'dashed'.
@@ -87,6 +100,7 @@ ggplot(data = movies,mapping=aes(x=production_budget,y=domestic_gross))+
 ```
 
 #Task8
+
 ```{r}
 #####Create a bar plot to visualize the counts of genre and also, fill the bar plot according to mpaa_rating:
 
@@ -105,6 +119,7 @@ ggplot(data = )+
 
 ```
 #Task10
+
 ```{r}
 ##### Label the graph from task9 with with labs(   )
 ##### Give the title: Movie genre with mpaa rating
