--- a/05_data_visualization.Rmd
+++ b/05_data_visualization.Rmd
@@ -1,39 +1,30 @@
 ---
 title: "Data visualization"
-date: "`r Sys.Date()`"
+date: "5/7/2021"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(
-	echo = TRUE,
-	message = FALSE,
-	warning = FALSE
-)
+knitr::opts_chunk$set(echo = TRUE)
+
 ```
 
-## Task1
-
+#Task1:
 ```{r, warning=FALSE, message=FALSE}
 #Run this code to observe the dataset
-options(scipen = 999)
 
-movies <- read_csv("./data/")
-
+movies = readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2018/2018-10-23/movie_profit.csv')
 head(movies)
 
 ```
-
-## Task2
-
+#Task2
 ```{r}
 #Load the tidyverse package here:
 
 
 ```
 
-## Task3
-
+#Task3
 ```{r}
 #Insert [movies] dataset in ggplot2 syntax:
 
@@ -41,13 +32,12 @@ ggplot(data =   )
 
 ```
 
-##  Task4:
-
+#Task4:
 ```{r}
 #Map domestic_gross to x-axis, worldwide_gross to y-axis
 #Set the color of point to blue
 #Set the shape of point to any points(1 or 2 or...24)[Your choice]
-#Set the size of points to genre
+#Set the size of points to 5
 ggplot(data = movies)+
   geom_point(mapping = aes(x=        , y=        ),
              color="",
@@ -56,7 +46,6 @@ ggplot(data = movies)+
 ```
 
 #Task5:
-
 ```{r}
 #Set the color aesthetics to genre and see what happens:
 ggplot(data = movies)+
@@ -75,7 +64,7 @@ ggplot(data = movies)+
 
 # Also, correct the positions of "+" sign:
 
-#hint: ******mapping = aes(x=----, y=-----)******
+#hint: ******ggplot(data=----, mapping = aes(x=----, y=-----))******
 
 ggplot(data = movies,       )
   +geom_point()
@@ -84,9 +73,7 @@ ggplot(data = movies,       )
 
 
 ```
-
 #Task7
-
 ```{r}
 #####Change the color of points in geom_point to 'orange'
 #####Change the linetype in geom_smooth to 'dashed'.
@@ -100,7 +87,6 @@ ggplot(data = movies,mapping=aes(x=production_budget,y=domestic_gross))+
 ```
 
 #Task8
-
 ```{r}
 #####Create a bar plot to visualize the counts of genre and also, fill the bar plot according to mpaa_rating:
 
@@ -119,7 +105,6 @@ ggplot(data = )+
 
 ```
 #Task10
-
 ```{r}
 ##### Label the graph from task9 with with labs(   )
 ##### Give the title: Movie genre with mpaa rating
@@ -131,4 +116,51 @@ ggplot(data = )+
 
 ```
 
+#Task 11
+
+```{r}
+#Create a box plot for worldwide_gross.
+ 
+
+
+ggplot(data = movies   ) +
+ geom_boxplot(mapping = 
+                aes(y = worldwide_gross))
+```
+#Task 12
+
+```{r}
+#Create a box plot of worldwide_gross for each genre.
+
+ggplot(data =         ) +
+ geom_boxplot(mapping = 
+                aes(x=         , y = worldwide_gross))
+```
+
+#Task 13
+
+```{r}
+gross<- ggplot(data = movies, aes(x= production_budget, y=domestic_gross))+
+  geom_point()
+
+#Here gross is the scatter plot between production budget and domestic gross.
+
+
+#Create a subplot with 2 columns based on genre:
+gross+ facet_wrap(facets = ~  , ncol =   )
+
+```
+#Task 14
+
+```{r}
+gross<- ggplot(data = movies, aes(x= production_budget, y=domestic_gross))+
+  geom_point()
+
+#gross is the scatter plot between production budget and domestic gross.
+
+#Create a subplot based on genre and mpaa_rating.
+
+
+gross+facet_grid(genre~        )
+```
 
